--- a/PPDB/PPDB.HTML
+++ b/PPDB/PPDB.HTML
@@ -70,26 +70,28 @@
 
 
 
-    <section class="w-[100%] flex justify-evenly ">
-        <div class="w-[50%] m-auto">
-            <h1 class="font-medium text-3xl mb-3 text-center m-auto">
+    <section class="w-[90%] flex justify-evenly m-auto">
+        <div class="w-[60%] min-w-min">
+            <h1 class="font-medium text-3xl mb-3 text-center">
                 Panduan pendaftaran peserta didik baru (PPDB)
                 SMP Global Chandra baga tahun pelajaran 2023/2024
             </h1>
 
-            <img class="mt-16 w-[90%]" src="/profile/pp.png" alt="">
+            <img class="mt-16 w-[90%] m-auto" src="/profile/pp.png" alt="">
         </div>
 
 
-        <div class="w-[30%]">
-            <div class="bg-[rgba(252,185,0,1)] p-6">
-                <h1 class="font-medium text-3xl w-72">
-                    Visi dan Misi SMP Global Chandra Baga
-                </h1>
-                <p>Info</p>
-                <p>Visi SMP Global Chandra Baga merupakan sekolah yang mempersiapkan calon pemimpin masa depan yang
-                    berkompeten dan berintegritas tinggi.</p>
+        <div class="w-[20%] bg-[rgba(252,185,0,1)] p-10 min-w-[150px] max-h-min text-white">
+
+            <h1 class="font-medium text-3xl ">
+                Visi dan Misi SMP Global Chandra Baga
+            </h1>
+            <div class="bg-blue-500 py-[0.5px] px-2 w-fit rounded-sm mt-3 mb-6">
+                <p class="font-medium text-white text-[12px]">INFO</p>
             </div>
+            <p>Visi SMP Global Chandra Baga merupakan sekolah yang mempersiapkan calon pemimpin masa depan yang
+                berkompeten dan berintegritas tinggi.</p>
+
         </div>
     </section>
 
