--- a/home1/index.html
+++ b/home1/index.html
@@ -85,8 +85,8 @@
                 Sekolah Terjangkau Dan Terbaik
             </P>
 
-            <button rel="" type="" class="cursor-pointer bg-blue-600 text-white px-8 py-4"
-                href="/PPDB/PPDB.HTML">INFORMASI</button>
+            <button rel="" type="button" class="cursor-pointer bg-blue-600 text-white px-8 py-4"
+                href="/PPDB/PPDB.HTML">INFORMASI PPDB</button>
         </div>
     </section>
 
@@ -94,21 +94,18 @@
     <article class="container w-full px-7 mx-auto mb-28 lg:flex justify-between items-center ">
 
         <div class="w-[100%] mt-8 mb-8 lg:w-[48%]">
-            <img class="rounded-full" src="/svg/sc.jpg" alt="">
+            <img class="rounded-full" src="/svg/SE.jpeg" alt="">
         </div>
 
         <div class="w-[50%] w-auto lg:w-[45%]">
             <h1 class="text-center font-bold text-3xl mb-6 text-5xl lg:text-left">PROFIL SMP GLOBAL CHANDRA BAGA</h1>
-            <p class="text-center mb-4 text-xl lg:text-left">Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit. Magni vero
-                sit
-                alias ipsum
-                maxime corrupti excepturi, rerum non molestias neque odit error nostrum animi accusamus laboriosam
-                doloribus
-                magnam? Ipsum exercitationem totam libero? Dolor dicta inventore, sunt quisquam repudiandae quae tempore
-                numquam quam cupiditate non laborum velit vitae laudantium natus aliquid harum? Unde accusamus facere
-                nam
-                architecto ratione fuga accusantium quos?</p>
+            <p class="text-center mb-4 text-xl lg:text-left">SMP Global Chandra Baga adalah sebuah institusi pendidikan
+                menengah yang terletak di Kota Bekasi, yang dikenal sebagai salah satu sekolah unggulan dengan
+                pendekatan pendidikan yang berkualitas. Berikut adalah profil singkatnya:
+
+                Visi:
+                Menjadi pusat pendidikan yang berkualitas, berorientasi global, dan berbasis karakter untuk mencetak
+                generasi muda yang kompeten dan berakhlak mulia.</p>
         </div>
 
     </article>
@@ -151,7 +148,7 @@
 
     </section>
 
-    <section class=" mt-28 w-full mx-auto bg-[#F5F5F5] pt-6 px-4  sm:px-20 sm:py-16">
+    <!-- <section class=" mt-28 w-full mx-auto bg-[#F5F5F5] pt-6 px-4  sm:px-20 sm:py-16">
         <div class="mb-7 sm:flex sm:items-center sm:justify-between">
             <div class="sm:max-w-[50%]">
                 <h1 class="font-bold text-3xl mb-6 sm:mb-16">PRESTASI KAMI</h1>
@@ -171,7 +168,7 @@
             </div>
         </div>
 
-    </section>
+    </section> -->
 
     <div class="container mx-auto py-8 mt-12 w-[90%] ">
         <h1 class="text-2xl font-bold mb-4">Video YouTube</h1>
