--- a/PPDB/PPDB.HTML
+++ b/PPDB/PPDB.HTML
@@ -12,7 +12,7 @@
 <body>
 
 
-    <header class="bg-white fixed w-full flex items-center justify-between z-10 px-4 lg:px-28">
+    <header class="bg-white fixed w-full flex items-center justify-between z-10 px-4 lg:px-14">
         <a href="home" class="font-bold text-2xl text-blue-600 py-6">
             SMP GCB
         </a>
@@ -20,22 +20,22 @@
             <img class="w-5" src="/svg/hamburger.png" alt="Menu">
         </button>
         <nav id="nav-menu"
-            class="hidden lg:flex lg:static lg:bg-transparent PX lg:shadow-none lg:rounded-none py-5  flex-col absolute top-full right-0 bg-white shadow-lg rounded-lg max-w-[250px] w-full">
+            class="hidden lg:flex lg:static lg:bg-transparent lg:shadow-none lg:rounded-none flex-col absolute top-full right-0 bg-white shadow-lg rounded-lg max-w-[250px] w-full">
             <ul class="flex flex-col lg:justify-center lg:flex-row">
                 <li class="group">
                     <a href="/home1/index.html"
-                        class="text-base text-black py-2 mx-8 flex group-hover:text-blue-600">Home</a>
+                        class="text-base text-black py-2 mx-4 flex group-hover:text-blue-600">Home</a>
                 </li>
                 <li class="group">
                     <a href="/profile/profile.html"
-                        class="text-base text-black py-2 mx-8 flex group-hover:text-blue-600">Profile</a>
+                        class="text-base text-black py-2 mx-4 flex group-hover:text-blue-600">Profile</a>
                 </li>
                 <li class="group">
-                    <a href="#contact" class="text-base text-black py-2 mx-8 flex group-hover:text-blue-600">Contact</a>
+                    <a href="#contact" class="text-base text-black py-2 mx-4 flex group-hover:text-blue-600">Contact</a>
                 </li>
                 <li class="group">
                     <a href="/PPDB/PPDB.HTML"
-                        class="text-base text-black py-2 mx-8 flex group-hover:text-blue-600">PPDB</a>
+                        class="text-base text-black py-2 mx-4 flex group-hover:text-blue-600">PPDB</a>
                 </li>
             </ul>
         </nav>
@@ -98,26 +98,23 @@
         </thead>
         <tbody>
             <tr>
-                <td class="border border-gray-300 py-2 px-4">Gelombang 1</td>
-                <td class="border border-gray-300 py-2 px-4"> januari – April 2024</td>
+                <td class="border border-gray-300 py-2 px-4">Pra Pendaftaran</td>
+                <td class="border border-gray-300 py-2 px-4">1 September – 31 Oktober 2021</td>
             </tr>
             <tr>
-                <td class="border border-gray-300 py-2 px-4">Gelombang 2</td>
-                <td class="border border-gray-300 py-2 px-4"> Mei – Juli 2024</td>
+                <td class="border border-gray-300 py-2 px-4">Pendaftaran</td>
+                <td class="border border-gray-300 py-2 px-4">1 November – 25 November 2021</td>
             </tr>
             <tr>
                 <td class="border border-gray-300 py-2 px-4">Pengumuman</td>
-                <td class="border border-gray-300 py-2 px-4"> Juli 2024</td>
+                <td class="border border-gray-300 py-2 px-4">17 Desember 2021</td>
             </tr>
-
+            <tr>
+                <td class="border border-gray-300 py-2 px-4">Daftar Ulang</td>
+                <td class="border border-gray-300 py-2 px-4">20 – 24 Desember 2021</td>
+            </tr>
         </tbody>
     </table>
-
-    <div class="w-[90%] m-auto relative mt-9 lg:w-[60%] lg:m-14 bg-slate-300 h-1 mb-10"></div>
-
-    <h2 class="text-3xl lg:ml-24 ml-10 font-bold mb-6">Link Pendaftaran</h2>
-    <a class="text-xl text-blue-600 lg:ml-24 ml-10 font-bold mb-6" href="https://forms.gle/nPFfXJJpkr2TjjnP9">Click
-        Here</a>
 
 
 
