--- a/PPDB.HTML
+++ b/PPDB.HTML
@@ -23,8 +23,7 @@
             class="hidden lg:flex lg:static lg:bg-transparent lg:shadow-none lg:rounded-none flex-col absolute top-full right-0 bg-white shadow-lg rounded-lg max-w-[250px] w-full">
             <ul class="flex flex-col lg:justify-center lg:flex-row">
                 <li class="group">
-                    <a href="/home1/index.html"
-                        class="text-base text-black py-2 mx-4 flex group-hover:text-blue-600">Home</a>
+                    <a href="/index.html" class="text-base text-black py-2 mx-4 flex group-hover:text-blue-600">Home</a>
                 </li>
                 <li class="group">
                     <a href="/profile/profile.html"
@@ -64,7 +63,7 @@
         <div class="w-[100%] lg:w-[60%] min-w-min">
             <h1 class="font-medium text-3xl mb-3 text-center">
                 Panduan pendaftaran peserta didik baru (PPDB)
-                SMP Global Chandra baga tahun pelajaran 2023/2024
+                SMP Global Chandra baga tahun pelajaran 2024/2025
             </h1>
 
             <img class="mt-10 lg:w[50%] w-[100%] m-auto" src="/profile/pp.png" alt="">
