--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                     class="text-base text-black py-2 mx-8 flex  group-hover:text-blue-600">Contact</a>
                             </li>
                             <li class="group">
-                                <a href="/PPDB/PPDB.HTML"
+                                <a href="/PPDB.HTML"
                                     class="text-base text-black py-2 mx-8 flex  group-hover:text-blue-600">PPDB</a>
                             </li>
                         </ul>
