--- a/profile/profile.html
+++ b/profile/profile.html
@@ -22,7 +22,7 @@
             class="hidden lg:flex lg:static lg:bg-transparent lg:shadow-none lg:rounded-none flex-col absolute top-full right-0 bg-white shadow-lg rounded-lg max-w-[250px] w-full">
             <ul class="flex flex-col lg:justify-center lg:flex-row">
                 <li class="group">
-                    <a href="/home1/index.html"
+                    <a href="../index.html"
                         class="text-base text-black py-2 mx-4 flex group-hover:text-blue-600">Home</a>
                 </li>
                 <li class="group">
@@ -33,7 +33,7 @@
                     <a href="#contact" class="text-base text-black py-2 mx-4 flex group-hover:text-blue-600">Contact</a>
                 </li>
                 <li class="group">
-                    <a href="/PPDB/PPDB.HTML"
+                    <a href="../PPDB.HTML"
                         class="text-base text-black py-2 mx-4 flex group-hover:text-blue-600">PPDB</a>
                 </li>
             </ul>
